docs(kotlin-spring): add inheritance issue
